--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.3",
     "axios": "^1.7.7",
     "next": "14.2.13",
     "react": "^18",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "react-loader-spinner": "^6.1.6"
+    "react-loader-spinner": "^6.1.6",
+    "react-select": "^5.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
